--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,90 @@
+# ============================================================================
+# SC4020 Group Project 2 - Dependencies
+# ============================================================================
+#
+# Phase 0: Environment Setup
+# This file contains all dependencies for the complete project including
+# Phase 0+1+2 (existing work) and Phase 3 (Task 3: AI Diagnostic Assistant)
+#
+# Compatibility Notes:
+# - Python Version: >=3.11 (as specified in pyproject.toml)
+# - Critical Change: NumPy downgraded from 2.3.4 to 1.26.4 for compatibility
+#   with transformers>=4.34.0 requirement from sentence-transformers
+# - NumPy 1.26.4 maintains compatibility with pandas 2.3.3, scikit-learn 1.7.2,
+#   torch>=2.4.1, and all other existing dependencies
+# - Security updates applied: sentence-transformers upgraded from vulnerable 3.0.1,
+#   joblib and python-dotenv upgraded to latest stable versions
+#
+# Installation:
+#   pip install -r requirements.txt
+#
+# Output directories (outputs/models/, outputs/vectorstore/) are tracked in git
+# with .gitkeep files and will exist after clone. See Phase 0 in implementation plan.
+#
+# See docs/task3_implementation_plan.md Phase 0 for full setup instructions
+# ============================================================================
+
+# ----------------------------------------------------------------------------
+# Core Dependencies
+# ----------------------------------------------------------------------------
+# Phase 0+1+2 dependencies maintained from original project
 prefixspan==0.5.2
 pandas==2.3.3
-numpy==2.3.4
+# CRITICAL: NumPy downgraded to 1.26.4 for transformers compatibility
+# transformers>=4.34.0 (required by sentence-transformers) only supports 
+# NumPy 2.x in versions 4.55+. NumPy 1.26.4 ensures compatibility across
+# all dependencies while maintaining support for existing packages.
+numpy==1.26.4
 scikit-learn==1.7.2
 jupyter==1.1.1
 ipykernel==6.29.0
-mlxtend==0.23.0
-nltk==3.8.1
-tqdm==4.66.1
 seaborn==0.13.2
+
+# ----------------------------------------------------------------------------
+# Updated Dependencies (Security Patches)
+# ----------------------------------------------------------------------------
+# Security and stability updates for existing packages
+mlxtend>=0.23.3  # Upgrade from 0.23.0
+nltk>=3.9.0      # Upgrade from 3.8.1
+tqdm>=4.66.3     # Upgrade from 4.66.1
+
+# ----------------------------------------------------------------------------
+# Task 3 Dependencies (New Additions)
+# ----------------------------------------------------------------------------
+# Vector database for symptom checker RAG pipeline
+# Note: Corrected from v5 plan's chromadb==1.2.2 (does not exist on PyPI)
+chromadb==1.3.0
+
+# Embedding model for sentence transformers
+# Note: Upgraded from v5 plan's sentence-transformers==3.0.1 which contains
+# a remote code execution (RCE) vulnerability. Version 5.1.2 includes security fixes.
+sentence-transformers==5.1.2
+
+# Google Generative AI client for Gemini integration
+google-genai==1.47.0
+
+# Environment variable management
+# Note: Upgraded from v5 plan's python-dotenv==1.0.1 to latest stable version
+python-dotenv==1.2.1
+
+# Model persistence and serialization
+# Note: Upgraded from v5 plan's joblib==1.2.0 which is outdated
+joblib==1.5.2
+
+# PyTorch for deep learning backend
+# Minimum 2.4.1 ensures compatibility with NumPy 1.26.4 and includes latest optimizations
+# No upper bound specified to allow patch updates for security and bug fixes
+torch>=2.4.1
+
+# Hugging Face transformers library
+# Minimum 4.41.0 provides explicit support for NumPy 1.x (required for NumPy 1.26.4)
+# Upper bound intentionally omitted: transformers 4.55+ would require NumPy 2.x
+# but we're using NumPy 1.26.4 for maximum compatibility across all dependencies
+transformers>=4.41.0
+
+# ============================================================================
+# End of Requirements
+# ============================================================================
+# After installation, verify environment with:
+# python -c "import chromadb; import sentence_transformers; import google.genai as genai; print('Environment ready!')"
+# ============================================================================
